# parallel-host-accessor-waits-for-asynchronous-kernel-execution

./: README.md
oneapi/: CMakeLists.txt  host-accessor-waits-for-asynchronous-kernel-execution.cpp  output.txt
